# tuxtalks-rs

./: Cargo.toml  GUARDRAILS.md  GUARDRAILS.template.md  POST_MORTEM.md  SETUP.md  TEAM.md  check_output.txt  check_output_2.txt  check_output_3.txt  clippy.toml  clippy_errors.txt
.agent/workflows/: team-review.md
scripts/: aiam_check.sh  pre-commit
src/: asr.rs  audio.rs  audit.rs  commands.rs  config.rs  error.rs  gui.rs  i18n.rs  input.rs  lal.rs  lib.rs  library.rs  main.rs  player_manager.rs  processor.rs  selection.rs  speechd.rs  voice_fingerprint.rs
src/asr/: mod.rs  vosk.rs  wyoming.rs  wyoming_manager.rs
src/audio/: engine.rs  mod.rs
src/core/: mod.rs  ollama.rs  text_normalizer.rs
src/games/: elite.rs  mod.rs  x4.rs
src/gui/: app.rs  messages.rs  mod.rs  state.rs
src/gui/tabs/: corrections.rs  games.rs  home.rs  input.rs  macros.rs  mod.rs  packs.rs  player.rs  settings.rs  sidebar.rs  speech.rs  training.rs  vocabulary.rs  voice.rs
src/gui/wizards/: add_game.rs  mod.rs  setup.rs
src/ipc/: client.rs  messages.rs  mod.rs  server.rs
src/players/: elisa.rs  jriver.rs  mod.rs  mpris.rs  mpris_utils.rs  strawberry.rs
src/tts/: mod.rs  piper.rs  speechd.rs  system.rs
src/utils/: fuzzy.rs  mod.rs
tests/: fuzz_test.rs  integration_test.rs
tests/common/: mock_asr.rs  mock_tts.rs  mod.rs
