[package]
name = "tuxtalks"
version = "0.1.0"
edition = "2021"
authors = ["TuxTalks Contributors"]
description = "Voice control for Linux gaming"
license = "MIT"
repository = "https://github.com/StarTuz/tuxtalks"

[lib]
name = "tuxtalks"
path = "src/lib.rs"

[[bin]]
name = "tuxtalks"
path = "src/main.rs"

[[bin]]
name = "tuxtalks-launcher"
path = "src/bin/launcher.rs"

[dependencies]
# Async Runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# Audio
cpal = "0.15"
rodio = "0.19"

# ASR
vosk = "0.2"

# D-Bus (speechd-ng integration)
zbus = "4"

# Input simulation (Linux native)
evdev = "0.12"

# GUI
iced = { version = "0.13", features = ["tokio"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# XML parsing
quick-xml = "0.36"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1"
thiserror = "1"

# Path utilities
dirs = "5"

# System info
sysinfo = "0.33"

# Async Traits
async-trait = "0.1"

# Networking & Database
reqwest = { version = "0.12", features = ["json"] }
rusqlite = { version = "0.32", features = ["bundled"] }

# Global Input (for PTT)
rdev = "0.5"

# Utils
rand = "0.8"
strsim = "0.11"
tokio-retry = "0.3"
lofty = "0.21"
walkdir = "2"
chrono = "0.4.42"
urlencoding = "2.1.3"
regex = "1.12.2"
base64 = "0.22.1"
rfd = "0.15"
lazy_static = "1.5.0"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.10"
